2008-06-14  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/datafile.h (df_no_fpe_trap, evaluate_inside_using): Add
	missing 'extern' to declaration of new variables.

2008-06-13  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/titlepag.tex:
	Replace "what's new in 4.0, 4.2" with "what's new in 4.3".
	Remove discussion of pre-version 4 features.
	Update or remove dead URLS.

2008-06-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/datafile.h src/set.c src/save.c src/show.c
	eval.c (evaluate_at) docs/gnuplot.doc:
	New datafile property 'set datafile {no}fpe_trap'.

	Until now, evaluate_at() has wrapped every expression evaluation with
	set/reset of a floating point exception handler. This is very expensive
	and dramatically slows down data input from large files.  Now we provide
	a way to disable this via "set datafile {no}fpe_trap" or turn it back on
	again if necessary.  The exception handler remains in place for contexts
	other than data input.

2008-06-08  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c src/misc.c src/save.c src/show.c src/unset.c:
	The flag LT_UNDEFINED was mis-used to indicate "same color as fill" for
	the border of filled areas.  This caused hard-to-reproduce bugs in the
	key samples for plots with filled areas.  Change the fillstyle code to
	use LT_DEFAULT instead for this purpose.

2008-06-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_margin) src/save.c (save_set_all) docs/gnuplot.doc
	demo/margins.dem demo/transparent_solids.dem demo/rgbalpha.dem:
	Add a new keyword "at" to absolute margin placement commands.
	'set rmargin screen .8' misleadingly seems to assign 80% of the page
	to the right margin.  Really we mean "set rmargin at screen 0.8",
	so say that.

2008-06-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics):  Interpret tic labels read from a data file as
	string constants rather than as formats.  Otherwise there are problems